--- a/HTML/main.html
+++ b/HTML/main.html
@@ -14,10 +14,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- {% block content %} -->
     <nav>
-        <a href="../HTML/main.html" id="home">Home</a>
-        <a href="../HTML/Templates/contact.html" id="contact">Contact Us</a>
-        <a href="../HTML/Templates/submit.html" id="submit">Submit a Recipe/Movie</a>
-        <a href="../HTML/Templates/login.html">Login</a>
+        <a id="a" href="../HTML/main.html" id="home">Home</a>
+        <a id="a" href="../HTML/Templates/contact.html" id="contact">Contact Us</a>
+        <a id="a" href="../HTML/Templates/submit.html" id="submit">Submit a Recipe/Movie</a>
+        <a id="a" href="../HTML/Templates/login.html">Login</a>
     </nav>
     <!-- {% endblock %} -->
     
