--- a/HTML/main.html
+++ b/HTML/main.html
@@ -37,7 +37,7 @@
  
         <div class="recipebox">
             <a href="../HTML/Templates/meals.html"/>
-                <button class="btn" id="dinnerbtn" style="cursor: pointer;">Get a Dinner</button>
+                <button class="btn" id="dinnerbtn" style="cursor: pointer;">Get a Meal</button>
         </div>
     
     </div>
